Update mouse bites & add some silkscreen info

--- a/.gitattributes
+++ b/.gitattributes
@@ -11,4 +11,5 @@
 *.kicad_pcb linguist-detectable=true linguist-language=KiCad-Layout
 *.kicad_mod linguist-detectable=true linguist-language=KiCad-Layout
 *.kicad_wks linguist-detectable=true linguist-language=KiCad-Layout
-output/**   linguist-generated=true
+
+output/**   -diff linguist-generated=true
