--- a/.kibot/configs/pdfsch.kibot.yaml
+++ b/.kibot/configs/pdfsch.kibot.yaml
@@ -6,7 +6,11 @@ outputs:
   - name: "schematics_pdf"
     comment: "Print schematics PDF"
     type: pdf_sch_print
-    dir: output/schematics
+    dir: schematics
     options:
-      color_theme: dracula
+      color_theme: '@SCH_COLOR_THEME@'
       background_color: false
+
+...
+definitions:
+  SCH_COLOR_THEME: dracula
