--- a/.gitignore
+++ b/.gitignore
@@ -75,5 +75,8 @@ Temporary Items
 
 ### Project Specific
 
-/output/test/
+/output/
+!/output/img/
+!/output/schematics/
+!/output/fabrication/
 /output/fabrication/*/gerbers/
