--- a/.gitattributes
+++ b/.gitattributes
@@ -5,6 +5,7 @@
 *.wrl   filter=lfs diff=lfs merge=lfs -text
 *.stp   filter=lfs diff=lfs merge=lfs -text
 *.step  filter=lfs diff=lfs merge=lfs -text
+*.zip   filter=lfs diff=lfs merge=lfs -text
 
 *.kicad_sch linguist-detectable=true linguist-language=KiCad-Schematic
 *.kicad_sym linguist-detectable=true linguist-language=KiCad-Schematic
